--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12.3"
 dependencies = [
     "asyncpg>=0.30.0",
     "fastapi>=0.115.14",
+    "pydantic-settings>=2.10.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
