--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "fastapi>=0.115.14",
     "pydantic-settings>=2.10.1",
+    "pyjwt[crypto]>=2.10.1",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
