--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12.3"
 license = { file = "LICENSE" }
 dependencies = [
     "asyncpg>=0.30.0",
+    "bcrypt>=4.3.0",
     "fastapi>=0.115.14",
     "pydantic-settings>=2.10.1",
     "pyjwt[crypto]>=2.10.1",
