--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "bcrypt>=4.3.0",
     "fastapi>=0.115.14",
     "pydantic-settings>=2.10.1",
+    "pydantic[email]>=2.11.7",
     "pyjwt[crypto]>=2.10.1",
+    "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.35.0",
 ]
