--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "pydantic[email]>=2.11.7",
     "pyjwt[crypto]>=2.10.1",
     "python-multipart>=0.0.20",
-    "sqlalchemy>=2.0.41",
+    "sqlalchemy[asyncio]>=2.0.41",
     "uvicorn>=0.35.0",
 ]
 
