--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12.3"
 license = { file = "LICENSE" }
 dependencies = [
+    "alembic>=1.16.4",
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
     "fastapi>=0.115.14",
