--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
     "fastapi>=0.115.14",
+    "orjson>=3.11.0",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
     "pyjwt[crypto]>=2.10.1",
