--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12.3"
 license = { file = "LICENSE" }
 dependencies = [
+    "aiosmtplib>=4.0.1",
     "alembic>=1.16.4",
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
     "fastapi>=0.115.14",
+    "jinja2>=3.1.6",
     "orjson>=3.11.0",
     "pydantic-settings>=2.10.1",
     "pydantic[email]>=2.11.7",
