--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ volumes:
 services:
   pg:
     image: postgres:14.1-alpine
-    container_name: postgres-service
+    container_name: anomer_db
     restart: "unless-stopped"
     env_file:
       - path: .env
