update .env example

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,17 @@
-# Пример файла .env
-# Скопируйте этот файл в .env и заполните реальными значениями
+SECURITY_PRIVATE_JWT="certs/jwt-private.pem"
+SECURITY_PUBLIC_JWT="certs/jwt-public.pem"
+SECURITY_ALGORITHM="RS256"
 
-SECURITY_PRIVATE_JWT=your_value
-SECURITY_PUBLIC_JWT=your_value
-SECURITY_ALGORITHM=your_value
+SERVER_HOST="0.0.0.0"
+SERVER_PORT=8001
 
-SERVER_HOST=your_value
-SERVER_PORT=your_value
+DB_HOST="127.0.0.1"
+DB_PORT=5432
+DB_USER="anoma"
+DB_PASSWORD="123"
+DB_NAME="anoma_db"
 
-DB_HOST=your_value
-DB_PORT=your_value
-DB_USER=your_value
-DB_PASSWORD=your_value
-DB_NAME=your_value
-
-MAIL_PORT=your_value
-MAIL_HOSTNAME=your_value
-MAIL_SENDER=your_value
-MAIL_PASSWORD=your_value
-MAIL_templates_path=your_value
+MAIL_PORT=465
+MAIL_HOSTNAME="smtp.gmail.com"
+MAIL_SENDER="username@gmail.com"
+MAIL_PASSWORD="your_app_password"
