update .env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# ОПЦИОНАЛЬНО: в каждой строке должен присутствовать комментарий
+# с примером значения, эти комментарии парсятся в скрипте create_env_example.sh
+# например: SERVER_PORT=8123 # example: 8001
+# тогда в .env.example будет:
+# SERVER_PORT=8001
+
 SECURITY_PRIVATE_JWT="certs/jwt-private.pem"
 SECURITY_PUBLIC_JWT="certs/jwt-public.pem"
 SECURITY_ALGORITHM="RS256"
