--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,12 @@
 # тогда в .env.example будет:
 # SERVER_PORT=8001
 
-SECURITY_PRIVATE_JWT="certs/jwt-private.pem"
-SECURITY_PUBLIC_JWT="certs/jwt-public.pem"
-SECURITY_ALGORITHM="RS256"
+SECURITY_PRIVATE_JWT="certs/jwt-private.pem" # путь до приватного ключа
+SECURITY_PUBLIC_JWT="certs/jwt-public.pem" # путь до публичного ключа
+SECURITY_ALGORITHM="RS256" # алгоритм шифрования
 
-SERVER_HOST="0.0.0.0"
-SERVER_PORT=8001
+SERVER_HOST="0.0.0.0" # адрес локального сервера
+SERVER_PORT=8001 # порт локального сервера
 
 DB_HOST="127.0.0.1"
 DB_PORT=5432
@@ -20,4 +20,4 @@ DB_NAME="anoma_db"
 MAIL_PORT=465
 MAIL_HOSTNAME="smtp.gmail.com"
 MAIL_SENDER="username@gmail.com"
-MAIL_PASSWORD="your_app_password"
+MAIL_PASSWORD="your_app_password" # пароль приложения (https://support.google.com/mail/answer/185833?hl=en)
