--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,12 @@ DB_USER="anoma"
 DB_PASSWORD="123"
 DB_NAME="anoma_db"
 
+REDIS_HOST="127.0.0.1"
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD="your_password"
+REDIS_VERIFICATION_CODE_TTL=300
+
 MAIL_PORT=465
 MAIL_HOSTNAME="smtp.gmail.com"
 MAIL_SENDER="username@gmail.com"
