--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,10 @@ services:
       - "6379:6379"
     volumes:
       - redis_volume:/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: redis-server /usr/local/etc/redis/redis.conf
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
