--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12.3"
 license = { file = "LICENSE" }
 dependencies = [
-    "aioredis>=2.0.1",
+    "redis[hiredis]>=5.0.0",
     "aiosmtplib>=4.0.1",
     "alembic>=1.16.4",
     "asyncpg>=0.30.0",
