added ruff rule ignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ exclude = [
 [tool.ruff.lint]
 ignore = [
     "RUF001", # "строка содержит кириллицу"
+    "RUF002", # "docstring содержит кириллицу"
     "RUF003" # "комментарий содержит кириллицу"
 ] 
 select = [
