--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,39 @@
-# ОПЦИОНАЛЬНО: в каждой строке должен присутствовать комментарий
+# ОПЦИОНАЛЬНО: над каждой парой ключ-значение должен присутствовать комментарий
 # с примером значения, эти комментарии парсятся в скрипте create_env_example.sh
-# например: SERVER_PORT=8123 # example: 8001
+# например:
+#
+# ```
+# # example: 8001 # порт сервера
+# SERVER_PORT=8123
+# ```
+#
 # тогда в .env.example будет:
-# SERVER_PORT=8001
-
+# ```
+# SERVER_PORT=8001 # порт сервера
+# ```
+#
+# --- Security
 SECURITY_PRIVATE_JWT="certs/jwt-private.pem" # путь до приватного ключа
 SECURITY_PUBLIC_JWT="certs/jwt-public.pem" # путь до публичного ключа
 SECURITY_ALGORITHM="RS256" # алгоритм шифрования
-
-SERVER_HOST="0.0.0.0" # адрес локального сервера
+# --- Server
+SERVER_HOST="0.0.0.0" # IP-адрес локального сервера
 SERVER_PORT=8001 # порт локального сервера
-
-DB_HOST="127.0.0.1"
-DB_PORT=5432
-DB_USER="anoma"
-DB_PASSWORD="123"
-DB_NAME="anoma_db"
-
-REDIS_HOST="127.0.0.1"
-REDIS_PORT=6379
-REDIS_DB=0
-REDIS_PASSWORD="your_password"
-REDIS_VERIFICATION_CODE_TTL=300
-
-MAIL_PORT=465
-MAIL_HOSTNAME="smtp.gmail.com"
-MAIL_SENDER="username@gmail.com"
+# --- Database
+DB_HOST="127.0.0.1" # IP-адрес экземляра СУБД
+DB_PORT=5432 # порт экземпляра СУБД
+DB_USER="anoma" # имя пользователя в СУБД
+DB_PASSWORD="123" # пароль пользователя СУБД
+DB_NAME="anoma_db" # наименование базы данных в СУБД
+# --- Redis
+REDIS_HOST="127.0.0.1" # IP-адрес redis сервера
+REDIS_PORT=6379 # порт redis сервера
+REDIS_DB=0 # наименование базы данных
+REDIS_PASSWORD="your_password" # пароль для аутентификации
+REDIS_VERIFICATION_CODE_TTL=300 # время жизни верификационного кода для регистрации в секундах
+# --- Mail
+MAIL_PORT=465 # порт почтового сервера
+MAIL_HOSTNAME="smtp.gmail.com" # адрес почтового сервера
+MAIL_SENDER="username@gmail.com" # электронный адрес отправителя
 MAIL_PASSWORD="your_app_password" # пароль приложения (https://support.google.com/mail/answer/185833?hl=en)
+MAIL_TEMPLATES_PATH="src/utils/email_templates" # путь до html шаблонов, которые используются для верстки писем
