--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "sqlalchemy[asyncio]>=2.0.41",
     "uvicorn>=0.35.0",
+    "alembic-postgresql-enum>=1.8.0",
 ]
 
 [tool.ruff]
