build: added 'E501' rule ignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ exclude = [
 ignore = [
     "RUF001", # "строка содержит кириллицу"
     "RUF002", # "docstring содержит кириллицу"
-    "RUF003" # "комментарий содержит кириллицу"
+    "RUF003", # "комментарий содержит кириллицу"
+    "E501" # line too long
 ] 
 select = [
     "E", # pycodestyle errors
