build: update env example

--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,55 @@
-# ОПЦИОНАЛЬНО: над каждой парой ключ-значение должен присутствовать комментарий
-# с примером значения, эти комментарии парсятся в скрипте create_env_example.sh
-# например:
-#
-# ```
-# # example: 8001 # порт сервера
-# SERVER_PORT=8123
-# ```
-#
-# тогда в .env.example будет:
-# ```
-# SERVER_PORT=8001 # порт сервера
-# ```
-#
+# В угловых скобках объявляются значения в качестве примера
+# эти значения используются для создания файла .env.example:
+# для строковых значений: <"example_value"> - description 
+# для числовых: <123> - description
+# для списков: <[1, 2, 3]> - description
+
 # --- Security
-SECURITY_PRIVATE_JWT="certs/jwt-private.pem" # путь до приватного ключа
-SECURITY_PUBLIC_JWT="certs/jwt-public.pem" # путь до публичного ключа
-SECURITY_ALGORITHM="RS256" # алгоритм шифрования
+    # <"certs/jwt-private.pem"> - путь до приватного ключа
+    SECURITY_PRIVATE_JWT="certs/jwt-private.pem"
+    # <"certs/jwt-public.pem"> - путь до публичного ключа
+    SECURITY_PUBLIC_JWT="certs/jwt-public.pem"
+    # <"RS256"> - алгоритм шифрования
+    SECURITY_ALGORITHM="RS256"
+
 # --- Server
-SERVER_HOST="0.0.0.0" # IP-адрес локального сервера
-SERVER_PORT=8001 # порт локального сервера
-# --- Database
-DB_HOST="127.0.0.1" # IP-адрес экземляра СУБД
-DB_PORT=5432 # порт экземпляра СУБД
-DB_USER="anoma" # имя пользователя в СУБД
-DB_PASSWORD="123" # пароль пользователя СУБД
-DB_NAME="anoma_db" # наименование базы данных в СУБД
+    # <"0.0.0.0"> - IP-адрес локального сервера
+    SERVER_HOST="0.0.0.0"
+    # <8001> - порт локального сервера
+    SERVER_PORT=8001
+
+# --- Db
+    # <"127.0.0.1"> - IP-адрес экземляра СУБД
+    DB_HOST="127.0.0.1"
+    # <5432> - порт экземпляра СУБД
+    DB_PORT=5432
+    # <"anoma"> - имя пользователя в СУБД
+    DB_USER="anoma"
+    # <"123"> - пароль пользователя СУБД
+    DB_PASSWORD="123"
+    # <"anoma_db"> - Наименование базы данных в СУБД
+    DB_NAME="anoma_db"
+
 # --- Redis
-REDIS_HOST="127.0.0.1" # IP-адрес redis сервера
-REDIS_PORT=6379 # порт redis сервера
-REDIS_DB=0 # наименование базы данных
-REDIS_PASSWORD="your_password" # пароль для аутентификации
-REDIS_VERIFICATION_CODE_TTL=300 # время жизни верификационного кода для регистрации в секундах
+    # <"127.0.0.1"> - IP-адрес redis сервера
+    REDIS_HOST="127.0.0.1"
+    # <6379> - порт redis сервера
+    REDIS_PORT=6379
+    # <0> - наименование базы данных
+    REDIS_DB=0
+    # <"123"> - пароль для аутентификации
+    REDIS_PASSWORD="123"
+    # <300> - время жизни верификационного кода для регистрации в секундах
+    REDIS_VERIFICATION_CODE_TTL=300
+
 # --- Mail
-MAIL_PORT=465 # порт почтового сервера
-MAIL_HOSTNAME="smtp.gmail.com" # адрес почтового сервера
-MAIL_SENDER="username@gmail.com" # электронный адрес отправителя
-MAIL_PASSWORD="your_app_password" # пароль приложения (https://support.google.com/mail/answer/185833?hl=en)
-MAIL_TEMPLATES_PATH="src/utils/email_templates" # путь до html шаблонов, которые используются для верстки писем
+    # <465> - порт почтового сервера
+    MAIL_PORT=465
+    # <"smtp.gmail.com"> - адрес почтового сервера
+    MAIL_HOSTNAME="smtp.gmail.com"
+    # <"your_email@gmail.com"> - электронный адрес отправителя
+    MAIL_SENDER="your_email@gmail.com"
+    # <"xxxx xxxx xxxx xxxx"> - пароль приложения (https://support.google.com/mail/answer/185833?hl=en)
+    MAIL_PASSWORD="xxxx xxxx xxxx xxxx"
+    # <"src/utils/email_templates"> - путь до html шаблонов, которые используются для верстки писем
+    MAIL_TEMPLATES_PATH="src/utils/email_templates"
