build: added config for env_editor.py

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,19 @@
             ],
             "jinja": false,
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "name": "Debugger: env_editor",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "env_editor",
+            "args": [
+                "remove",
+                "section",
+                "Server",
+            ],
+            "jinja": false,
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
