build: update env example file

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # для числовых: <123> - description
 # для списков: <[1, 2, 3]> - description
 
+# --- App
+    # <"Anomer Backend"> - Название приложения
+    APP_NAME="Anomer Backend"
+
 # --- Security
     # <"certs/jwt-private.pem"> - путь до приватного ключа
     SECURITY_PRIVATE_JWT="certs/jwt-private.pem"
